2008-06-29  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-window-manage-views.c
	(nautilus_window_slot_open_location_full):
	When opening a new window, use new window's active slot instead of
	re-using source slot in source window. Fixes spatial mode.

2008-06-29  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-navigation-window.c (real_open_slot):
	Remove obsolete multiview-TODO.

	* src/nautilus-window-slot.c (nautilus_window_slot_init),
	(nautilus_window_slot_remove_extra_location_widgets),
	(nautilus_window_slot_add_extra_location_widget):
	* src/nautilus-window-slot.h:
	Show/hide event box rather than extra widget container. Removes 1 px
	blue stripe displayed on top of newly-opened tab, before the view has
	been packed.

2008-06-29  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-application.c (save_session_to_file),
	(nautilus_application_load_session):
	Load slots from and save slots in session file.

2008-06-29  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-window-private.h:
	* src/nautilus-window.c (nautilus_window_get_slots):
	Add nautilus_window_get_slots() API.

2008-06-29  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-window-manage-views.c
	(nautilus_window_slot_open_location_full):
	Find target slot before checking whether the location actually
	changed, fall back to opening slot rather than the active slot.

2008-06-29  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-window-slot.c (real_slot_info_get_current_location),
	(nautilus_window_slot_info_iface_init):
	Return pending location, fall back to current location. This API is
	used by the side panes, we have to guarantee that a valid URI is
	returned even if the view has not yet been set up.

2008-06-28  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-window-slot.c
	(nautilus_window_slot_update_query_editor):
	Destroy old query editor before creating new one.

2008-06-28  Christian Neumair  <cneumair@gnome.org>
